ui overflow correction

--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -9,10 +9,14 @@ Brownish yellow - #f8ab38ff */
         --accent2: #eee;
     }
 
-    /* header {
-    } */
+    header {
+        padding: 1.4rem;
+        /* display: flex; */
+        /* flex-wrap: wrap; */
+    }
 
     .top {
+        font-size: 1.5rem;
         padding-left: 3rem;
     }
 
@@ -40,6 +44,15 @@ Brownish yellow - #f8ab38ff */
         display: grid;
         grid-template-columns: repeat(3, minmax(250px, 1fr));
         gap: 19px;
+    }
+
+    /* Business Directory */
+    .cardbox section.business p,
+    .cardbox section.business a {
+        max-width: 12rem;
+        width: 100%;
+        text-align: left;
+        margin-bottom: 0;
     }
 
     footer {
